# PiRacer_Instrument_Cluster_QT

./: .gitignore  API.md  CMakeLists.txt  CMakeLists_original.txt  CMakeLists_raspi.txt  CONFIGURATION.md  DEVELOPMENT.md  Doxyfile  README.md  UntitledProject.qmlproject  UntitledProject.qmlproject.qtds  UntitledProject.qrc  build-native.sh  build-raspi.sh  check-setup.sh  dbus_charging_tester.py  dbus_send.py  dbussender.py  dbussender_test.py  dbussender_turnsignal.py  deploy-qml-plugins.sh  deploy-static.sh  main.qml  package-lock.json  qmlmodules  raspi-toolchain.cmake  rc_example.py  receiver.cpp  test  test_can_data.sh  test_dbus_receiver.py  test_dbussender.py  test_on_pi.sh  test_turnsignal_integration.py
.github/workflows/: deploy.yml
can_new/: can_new.ino
content/: App.qml  BatteryBar.ui.qml  CMakeLists.txt  DashboardData.qml  DashboardDataCAN.qml  DashboardDataDBus.qml  DashboardLogic.qml  GearIndicator.qml  Screen01.qml  VectorIcon.qml  VectorIconExample.qml  WeatherData.qml  WeatherData_backup.qml  qmldir
docs/: API.md
docs/html/: API_8md.html  CMakeFiles_2UntitledProjectApp_8dir_2UntitledProjectApp__autogen_2mocs__compilation_8cpp_8o_8d.html  README_8md.html  UntitledProjectApp__autogen_2moc__predefs_8h.html  UntitledProjectApp__autogen_2moc__predefs_8h_source.html  UntitledProjectApp__autogen_2mocs__compilation_8cpp.html  UntitledProjectApp__autogen_2mocs__compilation_8cpp__incl.map  UntitledProjectApp__autogen_2mocs__compilation_8cpp__incl.md5  annotated.html  app__environment_8h.html  app__environment_8h__dep__incl.map  app__environment_8h__dep__incl.md5  app__environment_8h__incl.map  app__environment_8h__incl.md5  app__environment_8h_source.html  build-native_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build-native_2Main_2main_8qml.html  build-native_2content_2App_8qml.html  build-native_2content_2BatteryBar_8ui_8qml.html  build-native_2content_2DashboardDataCAN_8qml.html  build-native_2content_2DashboardDataDBus_8qml.html  build-native_2content_2DashboardData_8qml.html  build-native_2content_2DashboardLogic_8qml.html  build-native_2content_2DashboardLogic_8qml_ae748e17a51eb38f929cbc37293697b96_cgraph.map  build-native_2content_2DashboardLogic_8qml_ae748e17a51eb38f929cbc37293697b96_cgraph.md5  build-native_2content_2GearIndicator_8qml.html  build-native_2content_2Screen01_8qml.html  build-native_2content_2VectorIconExample_8qml.html  build-native_2content_2VectorIcon_8qml.html  build-native_2content_2WeatherData_8qml.html  build-native_2imports_2UntitledProject_2Constants_8qml.html  build-native_2imports_2UntitledProject_2DirectoryFontLoader_8qml.html  build-native_2imports_2UntitledProject_2EventListModel_8qml.html  build-native_2imports_2UntitledProject_2EventListSimulator_8qml.html  build-raspi_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  canreceiver_8cpp.html  canreceiver_8cpp_8o_8d.html  canreceiver_8cpp__incl.map  canreceiver_8cpp__incl.md5  canreceiver_8h.html  (+344 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  (+90 more)
imports/UntitledProject/: CMakeLists.txt  Constants.qml
mermaid/: full_stack_soft_arch.mmd  system_arch.mmd
src/: canreceiver.cpp  canreceiver.h  dbusreceiver.cpp  dbusreceiver.h  dbussender.py  dbusservice.cpp  dbusservice.h  import_qml_plugins.h  main.cpp
untitled/: CMakeLists.txt
